Fri Dec 14 11:54:06 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_CHECK_VARTYPE): check if a variable is defined
	  and its type.

	* configure.in (timezone, altzone): check for recent cygwin.

	* missing/strftime.c (strftime): fix for timezone.  [ruby-dev:32536]

	* lib/mkmf.rb (try_var): should fail for functions.

Fri Dec 14 08:17:24 2007  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_protect): restore root_jmpbuf even if proc exits by
	  break such as dbm.delete_if { break }.

Fri Dec 14 02:55:41 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (str_nth): direct jump if string is 7bit only.  great
	  performance boost for worst case.

	* string.c (str_strlen): direct size if string is 7bit only.

Fri Dec 14 02:29:32 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* encoding.c (rb_enc_compatible): 1st argument (typically the
	  receiver) would have higher priority in encoding detection.

Fri Dec 14 02:05:42 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_synchronized): should check if initialized.
	  [ruby-dev:32585]

Fri Dec 14 00:54:40 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (rb_reg_initialize): embedded string may override encoding
	  of the regular expression.

	* re.c (rb_reg_initialize): fix encoding of regular expression if
	  embedded string has its own encoding specified.

Thu Dec 13 22:16:46 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* encoding.c (rb_enc_compatible): encoding should never fall back
	  to ASCII-8BIT unless both encodings are ASCII-8BIT.

Thu Dec 13 20:31:28 2007  Tanaka Akira  <akr@fsij.org>

	* string.c (rb_str_shared_replace): make str noembed after free.

Thu Dec 13 20:09:09 2007  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_protect): restore root_jmpbuf to avoid SEGV by
	  'IO.pipe; [].each.next' with gcc version 3.3.5 (Debian 1:3.3.5-13)
	  on IA64.

Thu Dec 13 17:51:54 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>
